bk_ida/gccida/c2/legitimize_pic_address
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5494:4: error: expected ';' after expression
rtx v28; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5494:5: error: use of undeclared identifier 'v28'
rtx v28; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5501:4: error: expected ';' after expression
rtx v36; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5501:5: error: use of undeclared identifier 'v36'
rtx v36; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5514:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)orig->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5523:14: error: expected expression
v6 = *( rtx *)( v7.rtwint + 8); 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5563:33: error: use of undeclared identifier 'machine_mode'
v26 = gen_rtx_fmt_Ei( UNSPEC, ( machine_mode)v15, v16, 15); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5564:31: error: use of undeclared identifier 'machine_mode'
v27 = gen_rtx_fmt_e( CONST, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v26); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5565:22: error: use of undeclared identifier 'machine_mode'
v28 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v27); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5565:1: error: use of undeclared identifier 'v28'
v28 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v27); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5566:14: error: use of undeclared identifier 'v28'
*( ( _BYTE *)v28 + 3) |= 4u; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5567:7: error: use of undeclared identifier 'ix86_GOT_alias_set_set'; did you mean 'ix86_GOT_alias_set'?
v29 = ix86_GOT_alias_set_set; 
      ^~~~~~~~~~~~~~~~~~~~~~
      ix86_GOT_alias_set
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:4977:1: note: 'ix86_GOT_alias_set' declared here
ix86_GOT_alias_set ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5568:6: error: use of undeclared identifier 'ix86_GOT_alias_set_set'; did you mean 'ix86_GOT_alias_set'?
if ( ix86_GOT_alias_set_set == -1 ) 
     ^~~~~~~~~~~~~~~~~~~~~~
     ix86_GOT_alias_set
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:4977:1: note: 'ix86_GOT_alias_set' declared here
ix86_GOT_alias_set ()
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5571:1: error: use of undeclared identifier 'ix86_GOT_alias_set_set'
ix86_GOT_alias_set_set = v29; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5573:20: error: use of undeclared identifier 'v28'
set_mem_alias_set( v28, v29); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5575:21: error: use of undeclared identifier 'machine_mode'
v2 = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5576:22: error: use of undeclared identifier 'v28'
v30 = gen_movsi( v2, v28); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5580:33: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_Ei( UNSPEC, ( machine_mode)v15, v16, 6); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/i386.c:5581:31: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_e( CONST, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v17); 
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/legitimize_pic_address/src/obj/i386.o] Error 1
